# cs2menu

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  COMO_ACTUALIZAR_OFFSETS.md  COMPILATION_AND_INJECTION_GUIDE.md  CRASH_FIX_SUMMARY.md  ENTITY_SCANNING_ADDED.md  ESP_DIAGNOSTIC_INSTRUCTIONS.md  ESP_FIX_FINAL.md  ESP_FIX_SUMMARY.md  EXPLICACION_SOLUCION_ENTITYLIST.md  FEATURES_TODO.md  GUIA_RAPIDA_USO.md  OFFSET_MANAGER_README.md  PROBLEMA_ENTITYLIST.md  README.md  SOLUCION_FINAL.md  TROUBLESHOOTING.md  UPDATE_SUMMARY.md  build_output.txt  changelogs.txt  offsets.cfg.example  offsets.json  offsets.json.example  setup_and_build.py
.github/workflows/: build.yml
.zenflow/tasks/new-task-f2ad/: investigation.md  plan.md
docs/: HVH_FEATURES_GUIDE.md  HVH_OFFSETS_REFERENCE.md  PREMIUM_HVH_ARCHITECTURE.md  SKINCHANGER_GUIDE.md  VAC_BYPASS_STATUS.md
docs/archive/: ANALISIS_COMPLETO_ESP.md  ANALISIS_ISSUES_COMPLETO.md  CAMBIOS_OFFSETS_DECIMAL.md  DIAGNOSTIC_CHECKLIST.md  FIXES_APLICADOS_MAR09.md  IMPLEMENTATION_COMPLETE.md  INSTRUCCIONES_PRUEBA.md  INVESTIGACION_PROFUNDA.md  OFFSET_FIX_APPLIED.md  OFFSET_SCANNER_GUIDE.md  OFFSET_SCANNER_README.md  PROBLEMA_ACTUAL.md  PROBLEMA_REAL_OFFSETS.md  RESUMEN_CAMBIOS_ENTITYLIST.md  SCANNER_QUICK_REFERENCE.md  SOLUCION_ENTITYLIST.md  SOLUCION_FINAL_ENTITYLIST.md  SOLUCION_LOCALPLAYER.md  SOLUCION_LOCALPLAYER_NULL.md
src/: Aimbot.cpp  Aimbot.h  AntiAim.cpp  AntiAim.h  Backtrack.cpp  Backtrack.h  DiagnosticSystem.h  DllMain.cpp  EntityCache.cpp  EntityCache.h  EntityCachePro.cpp  EntityCachePro.h  Features.cpp  Features.h  Features_Update_FIXED.txt  Features_Update_NEW.txt  GlowTest.cpp  Hooks.cpp  Hooks.h  ImGui_Renderer.cpp  ImGui_Renderer.h  Launcher.cpp  LocalPlayer.cpp  LocalPlayer.h  Logger.h  ManualMap.cpp  ManualMap.h  Memory.cpp  Memory.h  MemorySafety.test.cpp  OffsetManager.cpp  OffsetManager.h  OffsetManager.test.cpp  OffsetScanner.cpp  OffsetScanner.h  OffsetUpdateNotification.test.cpp  OffsetUpdater.cpp  OffsetUpdater.h  PremiumLauncher.cpp  PremiumLauncherImGui.cpp  (+8 more)
